# fboot

./: CMakeLists.txt  README.md  fboot.conf.sample  meson.build
builddir/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json
builddir/meson-info/: intro-buildoptions.json  intro-dependencies.json  intro-projectinfo.json  intro-targets.json  meson-info.json
builddir/meson-logs/: meson-log.txt
builddir/meson-private/: coredata.dat.prev
builddir/src/: global.h
doc/: CMakeLists.txt  e4rat.conf.pod  meson.build
src/: CMakeLists.txt  a.out  balloc.h  buddycache.c  buddycache.h  collect.c  common.c  common.h  config.c  config.cc  config.h  defrag.c  defrag.h  device.c  device.cc  device.h  device.hh  e4rat-collect.cc  e4rat-preload.cc  eventcatcher.c  eventcatcher.h  fiemap.c  fileptr.c  fileptr.h  ini.c  ini.h  listener.c  listener.cc  listener.h  logging.c  logging.h  logging.hh  meson.build  singleton.hh
